LPS-46356 - fix z-index regression on navbars with search toggles

--- a/portal-web/docroot/html/css/taglib/navbar.css
+++ b/portal-web/docroot/html/css/taglib/navbar.css
@@ -2,10 +2,6 @@
 @import "mixins";
 
 .navbar .container {
-	.nav {
-		z-index: 1;
-	}
-
 	.nav-collapse .navbar-search-advanced {
 		float: none;
 		margin: 0;
