--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -755,7 +755,7 @@ $dockbarOpenGradientStart: #0EA6F9;
 				position: absolute;
 				top: -1px;
 				width: 225px;
-				z-index: 1;
+				z-index: 2;
 			}
 
 			.toggler-content-collapsed {
